# pdg2025-fcen-uba-TP-4

./: .gitignore  README.md
forms/: GuiPanelOptimization.ui  GuiPanelSelection.ui
qt/: DGP2025-A4.pri  DGP2025-A4.pro
src/core/: CMakeLists.txt  Edges.cpp  Edges.hpp  Faces.cpp  Geometry.cpp  Geometry.hpp  Graph.cpp  Graph.hpp  HalfEdges.cpp  Heap.cpp  Heap.hpp  Optimization.cpp  Optimization.hpp  Partition.cpp  Partition.hpp  PolygonMesh.cpp  PolygonMeshTest.cpp  PolygonMeshTest.hpp  Variable.cpp  Variable.hpp
src/gui/: GuiAboutDialog.cpp  GuiAboutDialog.hpp  GuiApplication.cpp  GuiApplication.hpp  GuiGLBuffer.cpp  GuiGLBuffer.hpp  GuiGLHandles.cpp  GuiGLHandles.hpp  GuiGLShader.cpp  GuiGLShader.hpp  GuiGLWidget.cpp  GuiGLWidget.hpp  GuiMainWindow.cpp  GuiMainWindow.hpp  GuiPanel.cpp  GuiPanel.hpp  GuiPanelGeneral.cpp  GuiPanelGeneral.hpp  GuiPanelOptimization.cpp  GuiPanelOptimization.hpp  GuiPanelPolygonMesh.cpp  GuiPanelPolygonMesh.hpp  GuiPanelRendering.cpp  GuiPanelRendering.hpp  GuiPanelSceneGraph.cpp  GuiPanelSceneGraph.hpp  GuiPanelSelection.cpp  GuiPanelSelection.hpp  GuiPanelTemplate.cpp  GuiPanelTemplate.hpp  GuiQtLogo.cpp  GuiQtLogo.hpp  GuiSceneGraphTree.hpp  GuiViewerApp.cpp  GuiViewerData.cpp  GuiViewerData.hpp
src/gui/unused/: CMakeLists.txt  GuiPanelIsocurves.cpp  GuiPanelIsocurves.hpp  GuiPanelSurgery.cpp  GuiPanelSurgery.hpp
src/io/: AppLoader.cpp  AppLoader.hpp  AppSaver.cpp  AppSaver.hpp  CMakeLists.txt  Loader.hpp  LoaderObj.cpp  LoaderObj.hpp  LoaderOff.cpp  LoaderOff.hpp  LoaderPly.cpp  LoaderPly.hpp  LoaderStl.cpp  LoaderStl.hpp  LoaderWrl.cpp  LoaderWrl.hpp  Saver.hpp  SaverObj.cpp  SaverObj.hpp  SaverOff.cpp  SaverOff.hpp  SaverPly.cpp  SaverPly.hpp  SaverStl.cpp  SaverStl.hpp  SaverWrl.cpp  SaverWrl.hpp  StrException.hpp  Tokenizer.cpp  Tokenizer.hpp  TokenizerFile.cpp  TokenizerFile.hpp  TokenizerString.cpp  TokenizerString.hpp
src/test/: CMakeLists.txt  dgpPrt.cpp  dgpPrt.hpp  dgpTest4.cpp
src/util/: BBox.cpp  BBox.hpp  CastMacros.hpp  Endian.cpp  Endian.hpp  StaticRotation.cpp  StaticRotation.hpp
src/wrl/: Appearance.cpp  Appearance.hpp  Group.cpp  Group.hpp  ImageTexture.cpp  ImageTexture.hpp  IndexedFaceSet.cpp  IndexedFaceSet.hpp  IndexedFaceSetPly.cpp  IndexedFaceSetPly.hpp  IndexedFaceSetVariables.cpp  IndexedFaceSetVariables.hpp  IndexedLineSet.cpp  IndexedLineSet.hpp  IndexedLineSetVariables.cpp  IndexedLineSetVariables.hpp  Material.cpp  Material.hpp  Node.cpp  Node.hpp  PixelTexture.cpp  PixelTexture.hpp  Ply.cpp  Ply.hpp  Rotation.cpp  Rotation.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneGraphProcessor.cpp  SceneGraphProcessor.hpp  SceneGraphTraversal.cpp  SceneGraphTraversal.hpp  Shape.cpp  Shape.hpp  Transform.cpp  Transform.hpp  Types.cpp  Types.hpp
